syntax = "proto3";

option java_multiple_files = true;
option java_package = "lib.connection";
option java_outer_classname = "TheMazeGrpcGdx";

package the_maze;

service TheMaze {
  rpc Connect (ConnectRequest) returns (ConnectReply) {}
  rpc SyncGameState (stream GameStateRequest) returns (stream GameStateResponse) {}
}

message ConnectRequest {
  string id = 1;
}

message ConnectReply {
  int32 count = 1;
}

message PlayerState {
  string id = 1;
  float positionX = 2;
  float positionY = 3;
  float rotation = 4;
}

message GameStateRequest {
  PlayerState player = 1;
}

message GameStateResponse {
  repeated PlayerState players = 1;
}